--- a/resources/sass/partials/_footer.scss
+++ b/resources/sass/partials/_footer.scss
@@ -15,6 +15,12 @@
             padding: 60px;
                 li{
                     color: lightgrey;
+                    font-size: 13px;
+                    padding-bottom: 2px;
+                    h3{
+                        font-size: 20px;
+                    }
+
                 }
 
                 ul{
