--- a/resources/sass/partials/_header.scss
+++ b/resources/sass/partials/_header.scss
@@ -4,6 +4,20 @@ header {
 
     }
 
+    .header-top{
+        background-color: $brand_primary_color;
+        .container-top{
+            width: 85%;
+            text-align: end;
+
+            span{
+                padding-right: 5px;
+                font-size: 12px;
+                color: white;
+            }
+        }
+    }
+
 .container{
     display: flex;
     justify-content: space-between;
@@ -32,6 +46,14 @@ nav{
             color:$brand_primary_color;
             border-bottom: 8px solid $brand_primary_color;        
         }   
+    }
+
+    .btn{
+        background-color: $brand_primary_color;
+        padding: 10px;
+        border-radius: 7px;
+        color: white;
+        cursor: pointer;
     }
 
     .jumbotron{
