fine descizione fumetto

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -82,6 +82,86 @@ header .jumbotron img {
   width: 100%;
 }
 
+.product-component .img-box {
+  position: relative;
+  background-color: #0282f9;
+  height: 70px;
+}
+.product-component .img-box .comic-cover {
+  position: absolute;
+  left: 420px;
+  bottom: 15px;
+  border: 1px solid white;
+}
+.product-component .img-box .comic-desc {
+  position: absolute;
+  top: 0;
+  left: 0;
+  background-color: #00a9d9;
+  padding: 2px 4px;
+  color: white;
+  font-size: 15px;
+}
+.product-component .img-box .gallery {
+  background-color: #00a9d9;
+  padding: 2px 4px;
+  color: white;
+  width: 100%;
+  text-align: center;
+  font-size: 12px;
+}
+.product-component .product-description {
+  display: flex;
+  width: 58%;
+  margin: 0 auto;
+  padding-block: 70px;
+}
+.product-component .product-description .descpition-section {
+  width: 70%;
+  padding-right: 40px;
+}
+.product-component .product-description .descpition-section h1 {
+  color: #003f5e;
+  font-size: 20px;
+  text-transform: uppercase;
+}
+.product-component .product-description .descpition-section .availability {
+  margin-block: 20px;
+  width: 100%;
+  display: flex;
+}
+.product-component .product-description .descpition-section .availability .price {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding-inline: 10px;
+  background-color: #339c36;
+}
+.product-component .product-description .descpition-section .availability .price .us-price {
+  padding-right: 100px;
+}
+.product-component .product-description .descpition-section .availability .aviability-box {
+  display: flex;
+  border-left: 1px solid black;
+  background-color: #339c36;
+  padding: 15px;
+  align-items: center;
+  color: white;
+}
+.product-component .product-description .descpition-section .availability .aviability-box i {
+  padding-left: 10px;
+}
+.product-component .product-description .descpition-section .comics-description {
+  font-size: 13px;
+  color: #303030;
+}
+.product-component .product-description .apply-now h4 {
+  text-align: right;
+  text-transform: uppercase;
+  font-size: 13px;
+  color: #303030;
+}
+
 .comics-list {
   padding: 30px 0;
   background-color: #303030;
