--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -4,5 +4,6 @@
 @import 'partials/variables';
 @import 'partials/commons';
 @import 'partials/header';
+@import 'partials/single-comics';
 @import 'partials/main';
 @import 'partials/footer';
