--- a/resources/sass/partials/_single-comics.scss
+++ b/resources/sass/partials/_single-comics.scss
@@ -80,7 +80,7 @@
             }
 
             .comics-description{
-                font-size: 13px;
+                font-size: 15px;
                 color: $brand_secondary_color;
             }   
         }
@@ -95,3 +95,63 @@
         }
     }
 }
+
+.bg-grey{
+    background-color: #f6f6f6;
+    border-top: 2px solid lightgray;
+    .product-info{
+        width: 56%;
+        margin: 0 auto;
+        display: flex;
+
+        .product-info-cont{
+            width: 48%;
+            margin: 0 auto;
+            padding-block: 20px 130px;
+            justify-content: space-between;
+            font-size: 14px;
+        }
+        
+        .col-small{
+            width: 30%;
+          }
+      
+        .col-big{
+            width: 60%;
+          }
+      
+          .talent-description{
+            display: flex;
+            padding-block: 8px;
+            border-bottom: 1px solid #e8e8e8;
+            flex-wrap: wrap;
+          }
+      
+          h3{
+            padding-bottom: 26px;
+            border-bottom: 1px solid #e8e8e8;
+            font-size: 20px;
+            color: #003f5e;
+          }
+
+          .primary-color{
+            color: $brand_primary_color;
+        }
+
+            .secondary-color{
+            color: $brand_secondary_color;
+        }
+          
+    }
+    
+    .spec-info-cont{
+        width: 48%;
+        margin: 0 auto;
+        padding-block: 20px 130px;
+        justify-content: space-between;
+        font-size: 14px;
+    }
+
+}
+
+ 
